# AI-Newsbot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: daily_digest.yml
src/daily_ai_news_email_digest/: crew.py  main.py
src/daily_ai_news_email_digest/config/: agents.yaml  tasks.yaml
src/daily_ai_news_email_digest/tools/: exa_tool.py  gmail_tool.py
